--- a/Assets/UI Toolkit/ChoiceStyles.uss
+++ b/Assets/UI Toolkit/ChoiceStyles.uss
@@ -9,9 +9,40 @@
     color: rgb(0, 0, 0);
 }
 
+.button-inactive {
+    margin-top: 10px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    margin-left: 10px;
+    -unity-background-image-tint-color: rgb(130, 130, 130);
+    -unity-background-scale-mode: stretch-to-fill;
+}
+
+.button:hover {
+    scale: 1.05 1.05;
+}
+
+.button-inactive:hover {
+    scale: 1 1;
+}
+
 .button {
     margin-top: 10px;
     margin-right: 10px;
     margin-bottom: 10px;
     margin-left: 10px;
+    transition-duration: 0.1s;
+    transition-timing-function: ease-in-out;
+    -unity-background-scale-mode: stretch-to-fill;
+}
+
+.button-selected {
+    margin-top: 10px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    margin-left: 10px;
+    transition-duration: 0.1s;
+    transition-timing-function: ease-in-out;
+    -unity-background-scale-mode: stretch-to-fill;
+    -unity-background-image-tint-color: rgb(170, 253, 177);
 }
