--- a/Assets/UI Toolkit/ContextMenuStyle.uss
+++ b/Assets/UI Toolkit/ContextMenuStyle.uss
@@ -1,6 +1,6 @@
 .button {
-    -unity-text-align: upper-center;
-    -unity-font-definition: url("project://database/Assets/Fonts/Montserrat-Regular.ttf?fileID=12800000&guid=ba24a5a859f298d4b915f4a55b2fdb80&type=3#Montserrat-Regular");
+    -unity-text-align: middle-center;
+    -unity-font-definition: url("project://database/Assets/UI%20Toolkit/UnityThemes/UnityDefaultRuntimeTheme.tss?fileID=2230732570650464555&guid=df4d61d241522404d8c4699402ab87fd&type=3#NotInter-Regular");
     font-size: 14px;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
@@ -12,9 +12,23 @@
     border-right-width: 0;
     border-bottom-width: 0;
     border-left-width: 0;
-    background-color: rgb(192, 192, 192);
+    background-color: rgb(229, 229, 229);
+    -unity-font-style: bold;
+    letter-spacing: 0;
+    width: 160px;
+    height: 30px;
+    justify-content: flex-start;
+    align-content: auto;
+    align-self: auto;
+    margin-top: 5px;
+    margin-right: 5px;
+    margin-bottom: 5px;
+    margin-left: 5px;
 }
 
 .button:hover {
     background-color: rgb(168, 168, 168);
+    scale: 1.03 1.03;
+    transition-duration: 0.1s;
+    transition-timing-function: ease-in-out;
 }
