--- a/Assets/UI Toolkit/SemContextMenuVisual.uxml
+++ b/Assets/UI Toolkit/SemContextMenuVisual.uxml
@@ -1,7 +1,7 @@
 <engine:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:engine="UnityEngine.UIElements" xmlns:editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="project://database/Assets/UI%20Toolkit/ContextMenuStyle.uss?fileID=7433441132597879392&amp;guid=7207aa205eae6e442893d7620e250d32&amp;type=3#ContextMenuStyle" />
-    <engine:VisualElement name="Container" style="flex-grow: 1; align-self: auto; justify-content: space-between; padding-top: 5px; padding-right: 5px; padding-bottom: 5px; padding-left: 5px; align-content: center; background-color: rgba(0, 0, 0, 0.31); border-top-left-radius: 5px; border-top-right-radius: 5px; border-bottom-right-radius: 5px; border-bottom-left-radius: 5px;">
-        <engine:Button text="Sygnał zezwalający" name="SygZezwalajacy" class="button" />
+    <engine:VisualElement name="Container" enabled="true" focusable="false" usage-hints="None" tabindex="0" style="flex-grow: 1; align-self: auto; justify-content: space-around; padding-top: 2px; padding-right: 2px; padding-bottom: 2px; padding-left: 2px; align-content: auto; background-color: rgb(149, 149, 149); border-top-left-radius: 5px; border-top-right-radius: 5px; border-bottom-right-radius: 5px; border-bottom-left-radius: 5px; position: absolute; align-items: stretch; visibility: hidden; display: flex;">
+        <engine:Button text="Sygnał zezwalający" name="SygZezwalajacy" tabindex="0" class="button" />
         <engine:Button text="Sygnał zastępczy" name="SygZastepczy" class="button" />
         <engine:Button text="Doraźne zwolnienie" name="SygDorZw" class="button" />
     </engine:VisualElement>
